[섹션7] Configuration Service - Remote Git Repository
- github에 git-local-repo 등록 후 yml 파일 불러와서 사용

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,4 +8,7 @@ spring:
     config:
       server:
         git:
-          uri: file://C:/git-local-repo
+#          uri: file://C:/git-local-repo
+          uri: https://github.com/doha23/spring-cloud-config
+#          username: doha23
+#          password: [password]
