--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,13 @@ server:
 spring:
   application:
     name: config-service
+  profiles:
+    active: native
   cloud:
     config:
       server:
+        native:
+          search-locations: file:///${user.home}/native-file-repo
         git:
 #          uri: file://C:/git-local-repo
           uri: https://github.com/doha23/spring-cloud-config
