--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
     config:
       server:
         native:
-          search-locations: file:///${user.home}/native-file-repo
+          search-locations: file:///C:/Users/user/Desktop/native-file-repo
         git:
 #          uri: file://C:/git-local-repo
           uri: https://github.com/doha23/spring-cloud-config
